# conecta-backend

./: .env.example  Cargo.toml  docker-compose.yml
migrations/: 0001_user.sql  0002_service.sql  0003_consultant.sql  0004_service_consultant.sql  0004_service_scheduled.sql  0005_service_order.sql  0005_service_scheduled.sql  0006_service_budget.sql  0007_service_order.sql  0008_notification.sql
src/: lib.rs  main.rs
src/modules/public/: mod.rs
src/modules/public/auth/: mod.rs
src/modules/public/auth/infrastructure/: mod.rs
src/modules/public/consultant/: mod.rs
src/modules/public/consultant/infrastructure/: mod.rs
src/modules/public/payment/: appstate.rs  mod.rs
src/modules/public/payment/application/: mod.rs
src/modules/public/payment/infrastructure/: mod.rs
src/modules/public/service/: appstate.rs  mod.rs
src/modules/public/user/: mod.rs
src/modules/public/user/application/: mod.rs
src/shared/: mod.rs
src/shared/application/: mod.rs
src/shared/application/ws/: ws.rs
src/shared/domain/entity/: mod.rs  notification.rs
src/shared/infra/: mod.rs
src/shared/infra/database/: db_config.rs  mod.rs
src/shared/infra/error/: mod.rs
src/shared/infra/helpers/: currency.rs
src/shared/infra/service/: hash_service.rs  mod.rs  notification_service.rs
src/shared/infra/validate/: validators.rs
src/shared/infra/ws/: mod.rs  ws_impl.rs
src/shared/presentation/: mod.rs
src/shared/presentation/controller/: ws_controller.rs
src/shared/presentation/response/: mod.rs
src/shared/presentation/types/: mod.rs
(+123 files in other folders)
