[package]
name = "conecta-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["macros"] }
axum-extra = { version = "0.12.1", features = ["typed-header"] }
tokio = { version = "1.48.0", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "time", "chrono", "rust_decimal"] }
serde_json = "1.0.145"
serde = "1.0.228"
dotenv = "0.15.0"
validator = { version = "0.20.0", features = ["derive"] }
axum-valid = "0.24.0"
async-trait = "0.1.89"
thiserror = "2.0.17"
chrono = { version = "0.4.42", features = ["serde"] }
reqwest = { version = "0.12.24", features = ["json", "default-tls"] }
rust_decimal = { version = "1.39.0", features = ["db-postgres", "macros"] }
uuid = { version = "1.18.1", features = ["serde"] }
jsonwebtoken = { version = "10.1.0", features = ["aws_lc_rs"] }
